--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,9 @@
             "type": "go",
             "request": "launch",
             "mode": "debug",
+            "env": {},
             "program": "${file}",
-            "args": ["go", "run","${file}"]
+            "args": ["go", "run","json-related.go"]
         }
     ]
 }
